# fuel-assessment

./: .gitignore  DEMO_GUIDE.md  ENDPOINTS.md  Job title_ Django Developer _ Remote.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: settings.py  urls.py
data/: geocode_cache.json
fuel_optimizer/: apps.py  models.py  serializers.py  urls.py  views.py
fuel_optimizer/management/commands/: load_fuel_stations.py
fuel_optimizer/migrations/: 0001_initial.py
fuel_optimizer/services/: __init__.py  geometry.py.backup  optimizer_v2.py  routing.py
fuel_optimizer/tests/: test_api.py
